samples/_failures_safe/1761353958_ab9236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_548ed3d1.c: In function ‘handle_event’:
./samples/SAFE/__tmp_548ed3d1.c:147:13: error: expected expression at end of input
  147 |             success =
      |             ^~~~~~~
./samples/SAFE/__tmp_548ed3d1.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_548ed3d1.c:147:13: error: expected declaration or statement at end of input
